--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="box">
       <h1>Team 16</h1>
       <p>Dibuat jiwa yang rapuh</p>
+      <p>ahahahaaa</p>
     </div>
   </div>
 </body>
