--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="box">
       <h1>Team 16</h1>
-      <p>Dibuat jiwa yang rapuh</p>
+      <p>Dibuat oleh jiwa yang rapuh</p>
       <p>ahahahaaa</p>
     </div>
   </div>
